[project]
name = "balpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "certifi>=2025.11.12",
    "cycler>=0.11.0",
    "cython>=3.0.10",
    "decorator>=5.1.1",
    "fonttools>=4.38.0",
    "gpy>=1.10.0,<1.12",
    "joblib>=1.3.2",
    "kiwisolver>=1.4.5",
    "matplotlib>=3.5.3",
    "mpltern>=1.0.4",
    "numpy>1.21.6,<1.24.0",
    "packaging>=24.0",
    "paramz>=0.9.6",
    "pillow>=9.5.0",
    "pyparsing>=3.1.2",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.0.2",
    "scipy>=1.7.3",
    "shapely>=2.0.4",
    "six>=1.16.0",
    "threadpoolctl>=3.1.0",
    "torch>=1.13.1,<2.5.0",
]
